# cliff

./: .env.example  .gitignore  AGENT.md  README.md  ashby_public_job_board_prototype_plan.md  ats_provider_integration_guide.md  ats_public_job_board_discovery_plan.md  company_intelligence_hiring_analysis_plan.md  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
ats_integration/: README.md  ashby.md  bamboohr.md  greenhouse.md  lever.md  personio.md  recruitee.md  smartrecruiters.md  teamtailor.md  workable.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
netherlands_ai_hiring_market_research/: company_intelligence_records.csv  evidence_log.md  market_report.md  methodology.md  raw_findings.jsonl  source_inventory.md
plan/: Hiring-Technical-Challenges-and-Next-Steps.soniox.transcript.txt  data_enrichment_notes.md  general_plan.md  task_1_foundation_config_storage.md  task_2_serper_collection.md  task_3_processing_aggregation_exports.md
supabase/: README.md  config.toml  roles.sql
tests/: ats_collection_resilience_acceptance_test.py  test_aggregate.py  test_ashby.py  test_ats_discovery.py  test_ats_providers.py  test_classify.py  test_cli.py  test_collection_resilience.py  test_company_enrichment.py  test_config.py  test_country_inference.py  test_dedupe.py  test_greenhouse.py  test_hashing.py  test_inspection.py  test_inspection_app.py  test_inspection_db.py  test_job_description_extraction.py  test_lever.py  test_llm_usage.py  test_normalization_refactor_acceptance.py  (+13 more)
(+144 files in other folders)
