[project]
name = "ai-hiring-radar"
version = "0.1.0"
description = "Title-only European AI hiring radar MVP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-ai>=1.0.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.7.0",
    "streamlit>=1.54.0",
    "tqdm>=4.68.3",
    "typer>=0.12.0",
]

[project.scripts]
ai-hiring-radar = "ai_hiring_radar.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
